# arch-mvc

./: .gitignore  README.md  main.py  pyproject.toml
src/controllers/: login_controller.py  people_finder_controller.py  people_register_controller.py
src/models/connections/: database.py  session.py
src/models/entities/: person.py  user.py
src/models/repository/: person_repository.py  user_repository.py
src/routes/: auth_route.py  people_finder_route.py  people_register_route.py
src/schemas/: auth_schema.py  person_schema.py
src/security/: dependencies.py  jwt.py
